# pez

./: .gitignore  Cargo.toml  README.md  config.schema.json  dist-workspace.toml  repomix-output.xml
.cargo/: mutants.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml  release.yml
docs/: architecture.md  commands.md  configuration.md  faq.md  getting-started.md  install.md  migrate-from-fisher.md
src/: cli.rs  commands.rs  config.rs  git.rs  lib.rs  lock_file.rs  lockfile.rs  main.rs  models.rs  resolver.rs  schema.rs  utils.rs
src/cmd/: activate.rs  completion.rs  doctor.rs  files.rs  hook_config.rs  init.rs  install.rs  list.rs  migrate.rs  mod.rs  prune.rs  uninstall.rs  upgrade.rs
src/tests_support/: env.rs  log.rs  mod.rs
tests/: cli_main.rs
