[package]
name = "pez"
version = "0.4.2"
edition = "2024"
description = "A Rust-based plugin manager for fish."
homepage = "https://github.com/tetzng/pez"
readme = "README.md"
repository = "https://github.com/tetzng/pez"
license = "MIT"
keywords = ["fish", "plugin", "manager"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
console = "0.16.2"
git2 = { version = "0.20.3", features = [ "vendored-libgit2", "vendored-openssl" ] }
serde = "1.0.228"
serde_derive = "1.0.216"
sha2 = "0.10.9"
tabled = "0.20.0"
toml = "0.9.11"
clap_complete = "4.5.65"
regex = "1.12.2"
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
anyhow = "1.0.100"
tempfile = "3.24.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
semver = "1.0.23"
url = "2.5.8"

[dev-dependencies]
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
