[package]
name = "pez"
version = "0.4.2"
edition = "2024"
description = "A Rust-based plugin manager for fish."
homepage = "https://github.com/tetzng/pez"
readme = "README.md"
repository = "https://github.com/tetzng/pez"
license = "MIT"
keywords = ["fish", "plugin", "manager"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
git2 = { version = "0.20.4", features = [ "vendored-libgit2", "vendored-openssl" ] }
serde = "1.0.228"
serde_derive = "1.0.216"
sha2 = "0.11.0"
tabled = "0.20.0"
toml = "1.1.2"
clap_complete = "4.6.0"
regex = "1.12.3"
futures = "0.3.32"
tokio = { version = "1.52.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
anyhow = "1.0.102"
tempfile = "3.27.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
semver = "1.0.28"
url = "2.5.8"
schemars = { version = "1.2.1", optional = true }

[dev-dependencies]
libc = "0.2"

[features]
schema-gen = ["schemars"]

[[bin]]
name = "gen-config-schema"
path = "src/bin/gen_config_schema.rs"
required-features = ["schema-gen"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
